--- a/index.html
+++ b/index.html
@@ -116,20 +116,20 @@
               ></iframe>
             </div>
           </div>
-          <!-- <div class="col-md-6 col-12">
+          <div class="col-md-6 col-12">
             <div class="video-thumbnail">
               <iframe
                 class="embed-responsive-item"
                 width="100%"
                 height="315"
-                src="https://www.youtube.com/embed/OQz7Rh3tVic?si=NcHQrdvKmFay9YQh"
+                src="https://www.youtube.com/embed/lFh9YVG2Abg?si=yF0meoixgqKAEXJU"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
               ></iframe>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </section>
