--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Banana Castle - 5 inch Gauge Planet</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -13,7 +10,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <?php wp_head(); ?>
   </head>
   <body data-spy="scroll" data-target="#navbar" data-offset="0">
     <nav id="navbar" class="navbar navbar-expand-md border-bottom">
@@ -28,38 +24,21 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div
-        class="collapse navbar-collapse justify-content-center"
-        id="navbarNav"
-      >
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"
-              >Home</a
-            >
+            <a class="nav-link" href="index.html">Home</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="about">About</a>
-          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="https://richonrails.blog">Blog</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#projects">Downloads</a>
-          </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li> -->
         </ul>
       </div>
     </nav>
 
     <div id="section-dots"></div>
 
-    <section
-      id="home"
-      class="hero d-flex justify-content-center align-items-center cover"
-    >
+    <section id="home" class="hero d-flex justify-content-center align-items-center cover" >
       <div class="container text-center">
         <h1>Banana Castle</h1>
         <p>5 inch Gauge Planet</p>
@@ -87,49 +66,6 @@
         </div>
         <div class="scroll-arrow">
           <div class="arrow"></div>
-        </div>
-      </div>
-    </section>
-
-    <!-- <section id="blog" class="section">
-      <div class="container">
-        <h2>Latest Blog Posts</h2>
-        <div class="row"></div>
-      </div>
-    </section> -->
-
-    <section id="videos" class="section">
-      <div class="container">
-        <h2>Latest YouTube Videos</h2>
-        <div class="row">
-          <div class="col-md-6 col-12">
-            <div class="video-thumbnail">
-              <iframe
-                class="embed-responsive-item"
-                width="100%"
-                height="315"
-                src="https://www.youtube.com/embed/OQz7Rh3tVic?si=NcHQrdvKmFay9YQh"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </div>
-          <div class="col-md-6 col-12">
-            <div class="video-thumbnail">
-              <iframe
-                class="embed-responsive-item"
-                width="100%"
-                height="315"
-                src="https://www.youtube.com/embed/lFh9YVG2Abg?si=yF0meoixgqKAEXJU"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
-            </div>
-          </div>
         </div>
       </div>
     </section>
