--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
 
     <section id="latest-pictures" class="section">
       <div class="container">
-        <h2>Latest Pictures</h2>
-        <p class="text-muted">Follow us on Instagram for more.</p>
+        <h2>Photos</h2>        
         <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1">
           <div class="col-lg-4 col-md-6 col-12">
             <div class="picture rounded"><img src="./images/bc-1.jpg" /></div>
