Removed email address & updated blog link
Removed email address & updated blog link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://richonrails.blog">Blog</a>
+            <a class="nav-link" href="https://richonrails.co.uk">Blog</a>
           </li>
         </ul>
       </div>
@@ -43,9 +43,6 @@
         <h1>Banana Castle</h1>
         <p>5 inch Gauge Planet</p>
         <div class="social-icons">
-          <a href="mailto:hello@bananacastle.co.uk"
-            ><i class="fa-solid fa-envelope"></i
-          ></a>
           <a href="https://facebook.com/bananacastle" target="_blank"
             ><i class="fab fa-facebook"></i
           ></a>
